[project]
name = "labs"
version = "0.1.0"
description = "description"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "pip>=25.3",
]

[tool.uv]
dev-dependencies=[
    "pyfakefs>=5.10.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--cov-branch",
  "--cov-report=term-missing",
  "-q",
]
testpaths = ["tests"]
pythonpath = ["src"]


[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/__init__.py",
    "*/main.py*",
    "*/config.py*",
    ]


[tool.coverage.report]
show_missing = true
fail_under = 10